<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- 星期几标示 -->
    <LinearLayout
        android:id="@+id/week_sign_layout"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="vertical">

        <TableLayout
            android:background="@color/dialog_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/sunday" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/monday" />
                <TextView
                    style="@style/dateStyle"
                    android:text="@string/tuesday" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/wednesday" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/thursday" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/friday" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/saturday" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <!-- 月日历 -->
    <android.support.v4.view.ViewPager
        android:id="@+id/custom_calendar_vp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:background="@color/dialog_color">
    </android.support.v4.view.ViewPager>

</LinearLayout>