<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".MainActivity">

    <item
        android:id="@+id/view_search"
        android:icon="@drawable/icon_search"
        android:orderInCategory="80"
        android:title="@string/search"
        android:queryHint="@string/search_hint"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item android:id="@+id/search"
        android:title="@string/search"
        android:orderInCategory="80"
        android:icon="@drawable/icon_search"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/add_visit_plan"
        android:title="@string/add_visit_plan"
        android:orderInCategory="90"
        app:showAsAction="never" />

    <item android:id="@+id/add_temp_visit_record"
        android:title="@string/add_temp_visit_record"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>