<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/dialog_bg"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13.3dp"
            android:gravity="center"
            android:text="@string/mention"
            android:textColor="#323232"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/mention_content"
            android:textColor="#323232"
            android:textSize="14sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.33dp"
        android:layout_marginTop="33dp"
        android:background="#646464"/>

    <TextView
        android:id="@+id/dialog_know"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:clickable="true"
        android:text="@string/known"
        android:textColor="#646464"/>
</LinearLayout>